--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Easybank</title>
-  
+
   <!-- Stylesheets -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
+  <!-- SITE-HEADER -->
+  <header class="site-header">
+    <div class="site-header__container container">
+      <a class="logo" href="index.html">
+        <img class="logo__img" src="img/logo.svg" alt="EasyBank logo" width="139" height="20">
+      </a>
 
+      <!-- SITENAV -->
+      <nav class="sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Home</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">About</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Contact</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Blog</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#">Careers</a></li>
+        </ul>
+      </nav>
+
+      <a class="button" href="#">Request invite</a>
+    </div>
+  </header>
 
   <script src="js/main.js"></script>
 </body>
