--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
     </div>
   </header>
 
+  <!-- MAIN-CONTENT -->
+  <main class="main-content">
+    <!-- HERO -->
+    <div class="hero">
+      <div class="container">
+        <div class="hero__content">
+          <h1 class="hero__title">Next generation digital banking</h1>
+          <p class="hero__text">Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+          <a class="button" href="#">Request invite</a>
+        </div>
+
+        <img class="hero__img" src="img/hero-phones-desktop.png" alt="EasyBank mobile app demos" width="729" height="900" srcset="img/hero-phones-desktop.png 1x, img/hero-phones-desktop@2x.png 2x">
+      </div>
+    </div>
+  </main>
+
   <script src="js/main.js"></script>
 </body>
 </html>
