--- a/index.html
+++ b/index.html
@@ -89,6 +89,63 @@
         </ul>
       </div>
     </section>
+
+    <!-- INDEX-ARTICLES -->
+    <section class="index-articles">
+      <div class="container">
+        <h2 class="index-articles__title">Latest Articles</h2>
+        <ul class="article-cards-grid">
+          <li class="article-cards-grid__item">
+            <div class="article-card">
+              <img class="article-card__img" src="img/paper-money.jpg" alt="Paper money" width="255" height="200" srcset="img/paper-money.jpg 1x, img/paper-money@2x.jpg 2x">
+              <div class="article-card__content">
+                <h3 class="article-card__title">
+                  <a class="article-card__link" href="#">Receive money in any currency with no fees</a>
+                </h3>
+                <p class="article-card__author">By Claire Robinson</p>
+                <p class="article-card__excerpt">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
+              </div>
+            </div>
+          </li>
+          <li class="article-cards-grid__item">
+            <div class="article-card">
+              <img class="article-card__img" src="img/cafe-table.jpg" alt="Cafe table with plate" width="255" height="200" srcset="img/cafe-table.jpg 1x, img/cafe-table@2x.jpg 2x">
+              <div class="article-card__content">
+                <h3 class="article-card__title">
+                  <a class="article-card__link" href="#">Treat yourself without worrying about money</a>
+                </h3>
+                <p class="article-card__author">By Wilson Hutton</p>
+                <p class="article-card__excerpt">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
+              </div>
+            </div>
+          </li>
+          <li class="article-cards-grid__item">
+            <div class="article-card">
+              <img class="article-card__img" src="img/plane-wing.jpg" alt="Plane wing" width="255" height="200" srcset="img/plane-wing.jpg 1x, img/plane-wing@2x.jpg 2x">
+              <div class="article-card__content">
+                <h3 class="article-card__title">
+                  <a class="article-card__link" href="#">Take your Easybank card wherever you go</a>
+                </h3>
+                <p class="article-card__author">By Wilson Hutton</p>
+                <p class="article-card__excerpt">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
+              </div>
+            </div>
+          </li>
+          <li class="article-cards-grid__item">
+            <div class="article-card">
+              <img class="article-card__img" src="img/party-sparkles.jpg" alt="Party sparkles" width="255" height="200" srcset="img/party-sparkles.jpg 1x, img/party-sparkles@2x.jpg 2x">
+              <div class="article-card__content">
+                <h3 class="article-card__title">
+                  <a class="article-card__link" href="#">Our invite-only Beta accounts are now live!</a>
+                </h3>
+                <p class="article-card__author">By Claire Robinson</p>
+                <p class="article-card__excerpt">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <script src="js/main.js"></script>
